objects/Docusign_Recipient_Status__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Declined__c</fullName>
        <label>Date Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Docusign_Recipient_Company__c</fullName>
        <label>Docusign Recipient Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Recipient_Email__c</fullName>
        <label>Docusign Recipient Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Recipient_Id__c</fullName>
        <label>Docusign Recipient Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Recipient_Order__c</fullName>
        <label>Docusign Routing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Docusign_Recipient_Title__c</fullName>
        <label>Docusign Recipient Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Status__c</fullName>
        <label>Docusign Status Record</label>
        <referenceTo>Docusign_Status__c</referenceTo>
        <relationshipLabel>Docusign Recipient Status</relationshipLabel>
        <relationshipName>Docusign_Recipient_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recipient_Status__c</fullName>
        <description>From PSG</description>
        <label>Recipient Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Docusign Recipient Status</label>
    <nameField>
        <label>Docusign Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docusign Recipient Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>